--- a/NuclearChaseJourney - Common/nbproject/project.properties
+++ b/NuclearChaseJourney - Common/nbproject/project.properties
@@ -2,8 +2,8 @@ annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
-application.title=MyGame
-application.vendor=MyCompany
+application.title=Nuclear Chase Journey - Commons
+application.vendor=Dragon & Owl Studios
 assets.jar.name=assets.jar
 assets.excludes=**/*.j3odata,**/*.mesh,**/*.skeleton,**/*.mesh\.xml,**/*.skeleton\.xml,**/*.scene,**/*.material,**/*.obj,**/*.mtl,**/*.3ds,**/*.dae,**/*.blend,**/*.blend*[0-9]
 assets.folder.name=assets
