Added correct license(MPL 2) Fixed bad project references

--- a/NuclearChaseJourney - Client/nbproject/project.properties
+++ b/NuclearChaseJourney - Client/nbproject/project.properties
@@ -37,8 +37,8 @@ javac.classpath=\
     ${libs.jme3.classpath}:\
     ${libs.jme3-libraries.classpath}:\
     ${libs.jme3-libraries-quakemonkey.classpath}:\
-    ${reference.NuclearChaseJourney_-_Common.jar}:\
-    ${libs.Net_Owl.classpath}
+    ${libs.Net_Owl.classpath}:\
+    ${reference.NuclearChaseJourney_-_Common.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,7 +72,7 @@ manifest.file=MANIFEST.MF
 mkdist.disabled=false
 platform.active=default_platform
 project.NuclearChaseJourney_-_Common=../NuclearChaseJourney - Common
-reference.NuclearChaseJourney_-_Common.jar=${project.NuclearChaseJourney_-_Common}/dist/MyGame.jar
+reference.NuclearChaseJourney_-_Common.jar=${project.NuclearChaseJourney_-_Common}/dist/Nuclear Chase Journey - Commons.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -86,3 +86,4 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
+project.license=MPL
