Fixed more build problems

--- a/NuclearChaseJourney - Server/nbproject/project.properties
+++ b/NuclearChaseJourney - Server/nbproject/project.properties
@@ -31,6 +31,7 @@ dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.NuclearChaseJourney_-_Server-assets=assets\\
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -38,7 +39,8 @@ javac.classpath=\
     ${libs.jme3-libraries.classpath}:\
     ${libs.jme3-libraries-quakemonkey.classpath}:\
     ${libs.Net_Owl.classpath}:\
-    ${reference.NuclearChaseJourney_-_Common.jar}
+    ${reference.NuclearChaseJourney_-_Common.jar}:\
+    ${file.reference.NuclearChaseJourney_-_Server-assets}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
